<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:alpha="0.6"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back_imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:alpha="0.8"
                android:paddingLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back"/>
            <TextView
                android:id="@+id/date_time_textView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:textSize="20sp"
                android:textColor="#000000" />
            <ImageView
                android:id="@+id/add_photo_imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:alpha="0.8"
                android:paddingRight="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/add_photo"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <RadioGroup
            android:id="@+id/priority_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="15dp">
            <RadioButton
                android:id="@+id/important_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/important"
                android:textSize="18dp"
                android:textColor="#000080" />
            <RadioButton
                android:id="@+id/general_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/general"
                android:textSize="18dp"
                android:textColor="#000080"
                android:checked="true" />
            <RadioButton
                android:id="@+id/unimportant_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/unimportant"
                android:textSize="18dp"
                android:textColor="#000080" />
        </RadioGroup>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/content_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null" />
                <ImageView
                    android:id="@+id/photo_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="#000000"
                android:background="#9AFF9A"/>
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/confirm"
                android:textSize="16sp"
                android:textColor="#000000"
                android:background="#00FFFF"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>